debhelper (8.9.7) UNRELEASED; urgency=low

  * dh: Don't bother running dh_shlibdebs, dh_makeshlibs, or dh_strip
    for the binary target when all packages being acted on are indep.
  * debhelper no longer build-depends on man-db or file, to ease bootstrapping.
  * Remove obsolete versioned dependency on perl-base.
  * Avoid writing debhelper log files in no-act mode. Closes: #640586

 -- Joey Hess <joeyh@debian.org>  Mon, 29 Aug 2011 20:18:01 -0400

debhelper (8.9.6) unstable; urgency=low

  * dh_installlogcheck: Add support for --name. Closes: #639020
    Thanks, Gergely Nagy

 -- Joey Hess <joeyh@debian.org>  Tue, 23 Aug 2011 15:25:55 -0400

debhelper (8.9.5) unstable; urgency=low

  * dh_compress: Don't compress _sources documentation subdirectory
    as used by python-sphinx. Closes: #637492
    Thanks, Jakub Wilk
  * dh_ucf: fix test for ucf/ucfr availability and quote filenames.
    Closes: #638944
    Thanks, Jeroen Schot

 -- Joey Hess <joeyh@debian.org>  Tue, 23 Aug 2011 13:25:54 -0400

debhelper (8.9.4) unstable; urgency=low

  * dh: The --before --after --until and --remaining options are deprecated.
    Use override targets instead.
  * Assume that the package can be cleaned (i.e. the build directory can be
    removed) as long as it is built out-of-source tree and can be configured.
    This is useful for derivative buildsystems which generate Makefiles.
    (Modestas Vainius) Closes: #601590
  * dh_auto_test: Run cmake tests in parallel when allowed by
    DEB_BUILD_OPTIONS. (Modestas Vainius) Closes: #587885
  * dpkg-buildflags is only used to set environment in v9, to avoid
    re-breaking packages that were already broken a first time by
    dpkg-buildpackage unconditionally setting the environment, and
    worked around that by unsetting variables in the rules file.
    (Example: numpy)

 -- Joey Hess <joeyh@debian.org>  Sat, 06 Aug 2011 18:58:59 -0400

debhelper (8.9.3) unstable; urgency=low
