@@ -5,6 +5,7 @@ debhelper (8.9.7) UNRELEASED; urgency=low
   * debhelper no longer build-depends on man-db or file, to ease bootstrapping.
   * Remove obsolete versioned dependency on perl-base.
   * Avoid writing debhelper log files in no-act mode. Closes: #640586
+  * Tighten parsing of DEB_BUILD_OPTIONS.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 29 Aug 2011 20:18:01 -0400
 
